# goose-talk-to-me

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi_release.yaml
src/goose_talk_to_me/: talk_to_me.py
src/goose_talk_to_me.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/goose_talk_to_me/prompts/: talk_to_me.jinja
src/prompts/: talk_to_me.jinja
tests/: test_talk_to_me.py
